--- a/frontend/src/components/styles/login-style.css
+++ b/frontend/src/components/styles/login-style.css
@@ -1,5 +1,5 @@
 body {
-    background: url(images/laptopcoffee.jpeg);
+    /*background: url(images/laptopcoffee.jpeg);*/
     background-size: 105%;
   }
   
